# ProjetLong

./: README.md  chat.py
Code/DataPipelines/: README.md  clean_to_anno.py  extraction.py  testing.ipynb
Code/DataPipelines/HandleData/: CMakeLists.txt  README.md  cfile_extractor.py  clean.sh  get_code.py
Code/DataPipelines/SparkPipelines/: DataSet_constructor.py  README.md  clean_to_anno.py  code_assembler.py  extraction.py  extraction_tools.py  file.c  from_source_to_raw.py  raw_to_clean_1.py  raw_to_clean_2.py  similarity_tools.py
Code/Deployment/: Interface.ipynb  chat (12).py
Code/Finetuning/: Fine_Tune_C_in_Llama2.ipynb  Fine_Tune_Llama2_etape2.ipynb  README.md  Test_Model.ipynb  requirements.txt
Code/HandleData/: README.md  cfile_extractor.py
Code/HandleData/src/: CommentCapturer.cpp  main
Code/Interface/: README.md
Code/pipelines/: DataSet_constructor.py  extraction_tools.py
Code/pipelines/HandleData/: README.md  get_code.py
Code/pipelines/HandleData/src/: main.cpp
Data/: README.md
Data/test/: data_test_test_data.csv
pipelines/: Annotator.py  code_assembler.py  extraction.py  from_source_to_raw.py  raw_to_clean_1.py  raw_to_clean_2.py  similarity_tools.py
